tests/ui/for/issue-20605.next.stderr
error[E0277]: `dyn Iterator<Item = &'a mut u8>` is not an iterator
  --> $DIR/issue-20605.rs:6:17
   |
LL |     for item in *things { *item = 0 }
   |                 -^^^^^^
   |                 |
   |                 the trait `IntoIterator` is not implemented for `dyn Iterator<Item = &'a mut u8>`
   |                 help: consider mutably borrowing here: `&mut`
   |
   = note: the trait bound `dyn Iterator<Item = &'a mut u8>: IntoIterator` is not satisfied
   = note: required for `dyn Iterator<Item = &'a mut u8>` to implement `IntoIterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
